[fix]#9129 align labels and checkboxes on page list

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -3547,6 +3547,9 @@ nav.illustrated-links{
 					margin: 0px;
 					font-size: 22px;
 				}
+				resource-right label{
+					margin-top: 4px;
+				}
 				em, strong{
 					font-size: 12px;
 					font-weight: normal;
